<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">MyELT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_login">Log In</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="signup">Sign Up</string>
    <string name="needhelp">Need Help?</string>
    <string name="home_button">Home icon</string>
    <string name="menu">Menu collapse icon</string>
    <string name="user">Demo User</string>
    <string name="email">test@test.com</string>
    <string name="settings">Settings</string>
    <string name="user_image">User Image</string>
    
</resources>
