<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="0dp"
    tools:context="com.example.andy.MainActivity"
    android:layout_centerHorizontal="true"
    android:orientation="vertical" >
    
        
     <EditText android:id="@+id/username"
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
        android:hint="@string/username" />
     
     <EditText android:id="@+id/password"
        android:inputType="textPassword" 
        android:layout_width="match_parent"        
   		android:layout_height="wrap_content"
        android:hint="@string/password" />
     
      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:layout_gravity="center_vertical|center_horizontal"
        android:onClick="login" />
     
</LinearLayout>
