<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout 
	  android:id="@+id/header"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:layout_alignParentTop="true"
	  android:background="@color/headerBackground">
	 
      <ImageView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/home"
	    android:contentDescription="@string/menu"
	    android:layout_margin="8dp"
	    android:src="@drawable/menu"
	    android:layout_alignParentLeft="true"
	    android:clickable="true"
	    android:onClick="toggleSideMenu"/>
        	
      <ImageView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@id/home"
	    android:contentDescription="@string/home_button"
	    android:layout_marginTop="8dp"
	    android:layout_marginBottom="10dp"
	    android:src="@drawable/home"
	    android:clickable="true"
	    android:onClick="loadHomePage"/>
        
	  <ImageView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/app_name"
	    android:layout_margin="8dp"
	    android:src="@drawable/myelticon"
	    android:layout_alignParentRight="true"/>
	</RelativeLayout>
    <android.support.v4.widget.DrawerLayout
		android:layout_below="@id/header"
	    android:id="@+id/drawer_layout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />
  
	<!-- static item at the top -->
	<LinearLayout
        android:id="@+id/drawerll"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical" 
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:paddingLeft="20dp"
                android:src="@drawable/user"
                android:contentDescription="@string/user_image" />

            <LinearLayout
                android:id="@+id/drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    
    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/simple_list_view"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:groupIndicator="@android:color/transparent"
        />
    <TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#eeeeee"
        android:text="@string/settings"
        android:textColor="#000000"
        android:textSize="14sp" />
   <ExpandableListView
        android:id="@+id/expandable_list_view"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:groupIndicator="@android:color/transparent"
        />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
</RelativeLayout>